# Amulet-Faster

./: .gitattributes  .gitignore  CMakeLists.txt  README.md  pyproject.toml  setup.py
.github/workflows/: python-build.yml
src/amulet/faster/: __init__.py  __init__.pyi  _faster.py.cpp  _version.py  amulet_fasterConfig.cmake  dll.hpp  faster.cpp  faster.hpp
src/amulet/faster/__pyinstaller/: hook-amulet.faster.py
tests/: CMakeLists.txt
tests/test_amulet_faster/: __init__.py  __init__.pyi  _test_amulet_faster.py.cpp  test_py.py
tools/: cmake_generate.py  compile_tests.py  generate_pybind_stubs.py
